--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,7 @@
     "de": "German"
   },
   "header": {
+    "new-info": "Practice chord progressions now!",
     "scroll-info": "Scroll to learn more"
   },
   "stats": {
